tests/sksl/errors/Ossfuzz32587.dsl.glsl
### Compilation failed:

error: unknown identifier 'x1'

error: 'const' variables must be initialized

error: 'const' variables must be initialized

error: symbol 'x' was already defined

4 errors
